--- a/package.json
+++ b/package.json
@@ -12,14 +12,21 @@
     "db:push": "turbo run db:push",
     "db:push:reset": "turbo run db:push:reset",
     "db:studio": "turbo run db:studio",
+    "db:dev:push": "./scripts/db-dev.sh db push",
+    "db:dev:studio": "./scripts/db-dev.sh studio",
+    "db:dev:migrate": "./scripts/db-dev.sh migrate dev",
+    "db:prod:push": "./scripts/db-prod.sh db push",
+    "db:prod:studio": "./scripts/db-prod.sh studio",
+    "db:prod:migrate": "./scripts/db-prod.sh migrate deploy",
     "generate": "turbo run generate",
+    "preview:frontend": "NEXT_PUBLIC_VERCEL_ENV=preview npm run dev --workspace=frontend",
     "docker:build": "docker-compose build",
     "docker:up": "docker-compose up -d",
     "docker:down": "docker-compose down",
     "docker:logs": "docker-compose logs -f",
     "docker:server": "docker build -f apps/server/Dockerfile -t shadow-server .",
     "docker:sidecar": "docker build -f apps/sidecar/Dockerfile -t shadow-sidecar .",
-    "start:prod": "./scripts/start-prod.sh"
+    "prod:server": "./scripts/start-server-prod.sh"
   },
   "prisma": {
     "schema": "packages/db/prisma/schema.prisma"
